<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scrollview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="#ffffff"
                android:fontFamily="serif"
                android:text="@string/permissions"
                android:layout_marginBottom="32dp"/>
            <LinearLayout
                style="@style/ui_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/ui_card_title"
                    android:text="@string/notification_access"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="@color/ui_card_text"
                    android:text="@string/permission_notifications_description"/>
                <TextView
                    style="@style/ui_button_round"
                    android:onClick="grantNotificationAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/grant"/>
            </LinearLayout>
            <LinearLayout
                style="@style/ui_card"
                android:id="@+id/storagecard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/ui_card_title"
                    android:text="@string/storage_access"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="@color/ui_card_text"
                    android:text="@string/permission_storage_description"/>
                <TextView
                    style="@style/ui_button_round"
                    android:onClick="grantStorageAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/grant"/>
            </LinearLayout>
            <LinearLayout
                style="@style/ui_card"
                android:id="@+id/contactsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/ui_card_title"
                    android:text="@string/contacts_access"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textColor="@color/ui_card_text"
                    android:text="@string/permission_contacts_description"/>
                <TextView
                    style="@style/ui_button_round"
                    android:onClick="grantContactsAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/grant"/>
            </LinearLayout>
            <TextView
                style="@style/ui_button"
                android:onClick="done"
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="21sp"
                android:layout_margin="16dp"
                android:text="@string/done"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>