<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/notifications_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_notification"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/notifications"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/starred_contacts_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_contact"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/starred_contacts"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/music_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_play"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/media_player"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/flag_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_shapes"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/flag"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/widget_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_other"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/widget"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/spacer_section"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_other"
            android:tint="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/spacer"
            android:textColor="@color/ui_card_text"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>