<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="192dp"
    android:background="@drawable/ui_card">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@color/ui_card_title"
        android:textSize="20sp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/ui_card_separator"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/removeBtn"
        style="@style/applongpressbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/ui_card_text"
        android:text="@string/remove_icon"
        android:drawableStart="@drawable/ic_cross"
        android:drawableTint="@color/ui_card_text"/>
    <TextView
        android:id="@+id/appinfobtn"
        style="@style/applongpressbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/ui_card_text"
        android:text="@string/propenties"
        android:drawableStart="@drawable/ic_info"
        android:drawableTint="@color/ui_card_text"/>
    <TextView
        android:id="@+id/editbtn"
        style="@style/applongpressbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/ui_card_text"
        android:text="@string/edit"
        android:drawableStart="@drawable/ic_edit"
        android:drawableTint="@color/ui_card_text"/>
</LinearLayout>