<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <EditText
            style="@style/ui_input"
            android:id="@+id/appname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="56dp"
            android:imeOptions="actionGo"
            android:inputType="textNoSuggestions"
            android:hint="@string/app_name_hint"
            android:maxLines="1"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:gravity="start|center_vertical"
            android:textColor="@color/ui_card_title"
            android:textSize="32sp"/>
        <ImageView
            android:id="@+id/openinsettings"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_settings"
            android:padding="8dp"
            android:layout_marginEnd="-6dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/iconimg"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:padding="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/version_icon"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_info"
                    android:padding="12dp"
                    app:tint="@color/ui_card_text"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textSize="18sp"
                        android:textColor="@color/ui_card_text"/>
                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/ui_card_text_secondary"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/uninstallbtn"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/uninstall_icon"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_cross"
                    android:padding="12dp"
                    app:tint="@color/ui_card_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uninstall"
                    android:textSize="18sp"
                    android:textColor="@color/ui_card_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/component"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/component_icon"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_other"
            android:padding="12dp"
            app:tint="@color/ui_card_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/component"
                android:textSize="18sp"
                app:tint="@color/ui_card_text"/>
            <TextView
                android:id="@+id/componentname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/ui_card_text_secondary"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>